[gd_scene load_steps=8 format=2]

[ext_resource path="res://dodge_assets/fonts/Xolonium-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Hud.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
size = 64
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 64
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 64
font_data = ExtResource( 1 )

[sub_resource type="InputEventAction" id=4]
action = "ui_select"

[sub_resource type="ShortCut" id=5]
shortcut = SubResource( 4 )

[node name="Hud" type="CanvasLayer"]
script = ExtResource( 2 )

[node name="ScoreLabel" type="Label" parent="."]
anchor_right = 1.0
margin_bottom = 78.0
custom_fonts/font = SubResource( 1 )
text = "0"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Message" type="Label" parent="."]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -39.0
margin_bottom = 39.0
custom_fonts/font = SubResource( 2 )
text = "Dodge the Creeps!"
align = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StartButton" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -90.0
margin_top = -200.0
margin_right = 90.0
margin_bottom = -100.0
custom_fonts/font = SubResource( 3 )
shortcut = SubResource( 5 )
text = "Start"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MessageTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true
[connection signal="pressed" from="StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="timeout" from="MessageTimer" to="." method="_on_MessageTimer_timeout"]
